Added gender warning

--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -120,7 +120,8 @@
         <div
             style="margin: 15px 0; font-size: 14px; color: #666; background: #fff3cd; padding: 10px; border-radius: 5px; border: 1px solid #ffeeba;">
             ℹ️ <strong>Tip:</strong> Please update your profile (photo, bio, location) in <em>Edit Profile</em> before
-            finding a match to get better connections!
+            finding a match to get better connections! <br> <strong>Important:</strong> Set your gender in <em>Edit
+                Profile</em> to be found by others.
         </div>
 
         <a href="{% url 'find_match' %}" class="btn">Find Match (3💎)</a>
